# sharezy

./: README.md
host/: Cargo.toml
host/src/: main.rs
