[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }

ddc-hi = "0.4.1"
btleplug = "0.10.4"
